Fix for when no GPS location was available, but a new location was manually set afterwards.